Fix layout on iPhone

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,7 @@ body {
   font-family: Palatino, georgia, "times new roman", serif
 }
 
-/* Structure */
-
-/* Full size, maximum 990 px */
+/* Full size, maximum 990 px. Media query overrides at the bottom. */
 .container {
   width: 990px;
   margin-left: auto;
@@ -28,40 +26,6 @@ body {
   float: right;
   font-size: 0.8em;
 }
-
-/* Between 990px and 720px, resize with sidebar at a quart of the size */
-@media all and (max-width: 990px) and (min-width: 720px) {
-  .container {
-    width: 100%;
-  }
-  
-  .main {
-    width: 74%;
-  }
-  
-  .side {
-    width: 24%;
-    float: left;
-  }
-}
-
-/* Smaller than 720 px, move sidebar below main content, and use full width */
-@media all and (max-width: 719px) {
-  .container {
-    width: 100%;
-  }
-  
-  .main {
-    width: 100%;
-  }
-  .side {
-    width: 100%;
-    border-top: 2px solid black;
-    float: left;
-  }
-}
-
-/** /structure **/
 
 .side a {
   color: #333;
@@ -115,4 +79,52 @@ h1.postTitle a {
 #portrait {
   float: left;
   margin-right: 5px;
+}
+
+#aboutme {
+  min-height: 80px; /* At leat size of the image */
+}
+
+.clearfix {
+  clear: both;
+}
+
+/* Between 990px and 720px, resize with sidebar at a quart of the size */
+@media all and (max-width: 990px) and (min-width: 720px) {
+  .container {
+    width: 100%;
+  }
+  
+  .main {
+    width: 74%;
+  }
+  
+  .side {
+    width: 24%;
+    float: left;
+  }
+}
+
+/* Smaller than 720 px, move sidebar below main content, and use full width, but make headings smaller */
+@media all and (max-width: 719px) {
+  .container {
+    width: 100%;
+  }
+  
+  .main {
+    width: 100%;
+  }
+  .side {
+    width: 100%;
+    border-top: 2px solid black;
+    float: left;
+  }
+  
+  .header #siteTitle {
+    font-size: 2.5em; 
+  }
+  
+  h1 {
+    font-size: 1.5em;
+  }
 }
